# ChangeLog for x11-proto/renderproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/renderproto/ChangeLog,v 1.40 2009/04/16 02:23:48 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> renderproto-0.9.3.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> renderproto-0.9.3.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  renderproto-0.9.3.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> renderproto-0.9.3.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> renderproto-0.9.3.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> renderproto-0.9.3.ebuild:
  Marking renderproto-0.9.3 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> renderproto-0.9.3.ebuild:
  Marking renderproto-0.9.3 ppc stable for bug 251832

*renderproto-0.9.3-r1 (25 Mar 2009)

  25 Mar 2009; Rémi Cardona <remi@gentoo.org>
  +files/0.9.3-fix-render-h-compilation.patch, +renderproto-0.9.3-r1.ebuild:
  add patch to fix build error (see bug #238665)

  20 Dec 2007; Dawid Węgliński <cla@gentoo.org> renderproto-0.9.3.ebuild:
  Reverting back to ~x86

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> renderproto-0.9.3.ebuild:
  Stable on x86 (bug #202087)

  15 Dec 2007; Doug Klima <cardoe@gentoo.org> renderproto-0.9.3.ebuild:
  revert stable markings since this is for X.org 7.3. bug #202087

  15 Dec 2007; Doug Klima <cardoe@gentoo.org> renderproto-0.9.3.ebuild:
  amd64 stable bug #202087

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> renderproto-0.9.3.ebuild:
  alpha/ia64 stable wrt #202087

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org>
  renderproto-0.9.3.ebuild:
  Sparc stable --- Bug #202087 --- good for 3 months.

*renderproto-0.9.3 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;