@@ -1,8 +1,8 @@
 AUX 0.9.3-fix-render-h-compilation.patch 346 RMD160 71099f9e0f727e8f0c7f8b8361e8f301dfce2aee SHA1 5f3b4697a3e82ab304b239cb4e7acd1b3efad0c4 SHA256 05e8f8dcc68fcc78c55a6e4cf24e609464a6445feafd81a081a1039079330b4c
 DIST renderproto-0.9.2.tar.bz2 40056 RMD160 944cdea696eb6bdfc52db5368b152b420e156c07 SHA1 5698d99ded00200d15707e5ae1c10e2817abde7b SHA256 7754dfbbb1e3818f28720fa9647b8a593e9d54626a7896771c2bfac7f75e2726
 DIST renderproto-0.9.3.tar.bz2 54128 RMD160 60326cd364e1de1c539f4b2433b25628050a6f11 SHA1 c3425e2a5ceecd160b09462c50a69848756e449e SHA256 c98a08b877e98a8fa7daa04be472de7e0cb38a99593faca8b987effcea2dd45b
-EBUILD renderproto-0.9.2.ebuild 495 RMD160 2170c7758d713c2e511a5314bb2a316d66c982ef SHA1 bacb0bcd15c81ac365f469cbed19ccc12b458834 SHA256 431e0a84e0214d639f5288adec3f127ed8f3171300fba1bdf3197a23d188cb54
+EBUILD renderproto-0.9.2.ebuild 495 RMD160 cc2be32cfb78db976823643d50a5e402018c6c1a SHA1 a7972e41fe564dd27b2fbf8da7ae7aa0822ebca1 SHA256 58873b16316449c7685765f5a9b7790ef227c5cbc49c98eef2f10bcd8b1bd410
 EBUILD renderproto-0.9.3-r1.ebuild 601 RMD160 0308f50bbfe2f2074811493f6ebe26628d329a40 SHA1 b1f9ba0eaae78a0375adbe37d3cdecea560583d6 SHA256 2d79e0b73eca182ef55f39c0b75adfb9a3b9e2c444dabb53d94f75819b1306f5
-EBUILD renderproto-0.9.3.ebuild 526 RMD160 7c0a274d3bb9b44db1b9ee5e2526cf72e5851109 SHA1 b2c82414845f52861d836a9f99de1afdf71e0d01 SHA256 0a9a5a6f403f09a3fbb89e9b752121843ebafcc8bf0eee3daa08901688988fdb
-MISC ChangeLog 4797 RMD160 51d685e4433006e6392bbdea205fa87af7e61176 SHA1 3093cd5da15d883f6f495e19838ece83880fd616 SHA256 67a4d3ca15fbe2bb534b8ce330c978689c971f36cacfd8ab8a1158deaf6c099a
+EBUILD renderproto-0.9.3.ebuild 536 RMD160 643dac41e413942e25fb8c34328bc8307086ef40 SHA1 8cba2da6aaf95615d80c53842e9f7f0ebdee8ca5 SHA256 9109ce447a54b1d509a18e56fdfc496a5d277400dfa279bed007b95a7bc1c2b2
+MISC ChangeLog 4932 RMD160 c13889e78c3ba7ebebbec4ba04c49e138229923a SHA1 d9a2a2c2e1504ce8dfac3e5f44cdd153fc4174f7 SHA256 80973a08275582f37b48e7593b4205408bec2add3684b158996882cbf9cb8f75
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
