@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/renderproto/renderproto-0.9.2.ebuild,v 1.16 2007/02/04 18:08:36 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/renderproto/renderproto-0.9.2.ebuild,v 1.17 2009/05/05 15:21:22 fauli Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -10,6 +10,7 @@ inherit x-modular
 DESCRIPTION="X.Org Render protocol headers"
 
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
 
 RDEPEND=""
 DEPEND="${RDEPEND}"
