@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/renderproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/renderproto/ChangeLog,v 1.40 2009/04/16 02:23:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/renderproto/ChangeLog,v 1.41 2009/05/05 15:21:22 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  renderproto-0.9.2.ebuild, renderproto-0.9.3.ebuild:
+  fix repoman warnings
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> renderproto-0.9.3.ebuild:
   Stable for HPPA (bug #251832).
